2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Add new `const` globals
	`default_control_char` and `default_no_break_control_char`.
	(assign_control_character): Use `default_control_char` instead of
	a `.` character literal.
	(assign_no_break_control_character): Use
	`default_no_break_control_char` instead of a `'` character
	literal.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (assign_escape_character): Rename
	this...
	(assign_escape_character_request): ...to this.
	(escape_off): Rename this...
	(escape_off_request): ...to this.
	(save_escape_char): Rename this...
	(save_escape_char_request): ...to this.
	(restore_escape_char): Rename this...
	(restore_escape_char_request): ...to this.
	(init_input_requests): Update wire-uppery of request names to
	their handlers.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Add new `const` global
	`default_escape_char`.  Initialize `escape_char` using it.
	(assign_escape_character): Use `default_escape_char` instead of
	a `\\` character literal.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (process_input_stack): Emit warning
	in category "syntax", and otherwise ignore, horizontal space
	tokens (including `\h`, `\0`, `\|`, and `\^) after `\c` on an
	input line.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::next): Reject `\s` escape
	sequence after `\c` on an input line.  Throw warning in category
	"syntax" and don't interpret it at all.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::set_font): Move warning
	thrown (and recast it, and change its category from "font" to
	"syntax") when font selection attempted on the ignored part of
	an input line interrupted/continued with `\c` from here...